--- a/ngClientDev/package.json
+++ b/ngClientDev/package.json
@@ -29,6 +29,8 @@
     "angular2-flash-messages": "^1.0.8",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
+    "gulp": "^3.9.1",
+    "gulp-json-sass": "0.0.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
