--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "progressivemessangershadowapp",
+  "name": "chatilla",
   "version": "1.0.0",
-  "description": "",
+  "description": "chatilla",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
