--- a/ngClientDev/src/assets/manifest.json
+++ b/ngClientDev/src/assets/manifest.json
@@ -1,8 +1,7 @@
 {
   "name": "Chatilla",
   "short_name": "Chat",
-  "icons": [
-    {
+  "icons": [{
       "src": "icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
